# python_repository_simple

./: .coveragerc  .dockerignore  .flake8  .gitignore  .hadolint.yaml  LICENSE  README.md  docker-compose.yml  logging.conf  logging_config.py  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  release.yaml
.github/actions/: ruff.yml
.github/actions/poetry_setup/: action.yml
.github/actions/python_setup/: action.yml
.github/instructions/: main.instructions.md
.github/workflows/: _python_setup.yml  auto_approve.yml  auto_merge_dependabot.yml  black.yml  code-check.yml  flake8.yml  hadolint.yml  lint.yml  pyright.yml  pytest.yml  pytest2.yml  ruff.yml  test.yml
hoge/: huga.py
tests/hoge/: test_huga.py
