[tool.poetry]
name = "python_repository_simple"
version = "0.0.0"
description = "python_repository_simple"
authors = ["yamap55"]
license = "Creative Commons CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
# lint
flake8 = "5.0.4"
black = "23.1.0"
flake8-docstrings = "1.7.0"
flake8-quotes = "3.3.2"
flake8-bugbear = "23.2.13"
ruff = "^0.0.254"

# test
pytest = "7.2.2"
pytest-cov = "4.0.0"

# notebook
ipykernel = "6.16.2"

[tool.pytest.ini_options]
junit_family = "xunit1"
addopts = "--verbose --cov --showlocals --durations=5"

[tool.coverage.run]
omit = ["*/tests/*", "*/site-packages/*"]
