[tool.poetry]
name = "python_repository_simple"
version = "0.0.0"
description = "python_repository_simple"
authors = ["yamap55"]
license = "Creative Commons CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
# lint
black = "23.3.0"
ruff = "^0.0.284"

# test
pytest = "7.4.0"
pytest-cov = "4.1.0"

# notebook
ipykernel = "6.16.2"

[tool.pytest.ini_options]
junit_family = "xunit1"
addopts = "--verbose --cov --showlocals --durations=5"

[tool.coverage.run]
omit = ["*/tests/*", "*/site-packages/*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "C90", "I", "D", "UP", "B", "Q"]
# Rules to ignore:
# D200 One-line docstring should fit on one line with quotes
# D203 1 blank line required before class docstring
# D212 Multi-line docstring summary should start at the first line
# D400 First line should end with a period
# D401 First line should be in imperative mood
# D403 First word of the first line should be properly capitalized
# D413 Missing blank line after last section
# D415 First line should end with a period, question mark, or exclamation point
ignore = ["D200", "D203", "D212", "D400", "D401", "D403", "D413", "D415"]
exclude = ["__init__.py", "work", ".venv", ".git"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"
