[project]
name = "python_repository_simple"
version = "0.0.0"
description = "python_repository_simple"
authors = [
    { name = "yamap55", email = "1785817+yamap55@users.noreply.github.com" },
]
license = { file = "LICENSE" }
readme = "README.md"

requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pytest>=8.3.4", "pytest-cov>=6.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_repository_simple"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
junit_family = "xunit1"
addopts = ["--verbose", "--cov", "--showlocals", "--durations=5"]

[tool.coverage.run]
omit = ["*/tests/*", "*/site-packages/*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "D", "UP", "B", "Q"]
# Rules to ignore:
# D200 One-line docstring should fit on one line with quotes
# D203 1 blank line required before class docstring
# D212 Multi-line docstring summary should start at the first line
# D400 First line should end with a period
# D401 First line should be in imperative mood
# D403 First word of the first line should be properly capitalized
# D413 Missing blank line after last section
# D415 First line should end with a period, question mark, or exclamation point
ignore = ["D200", "D203", "D212", "D400", "D401", "D403", "D413", "D415"]
exclude = ["__init__.py", "work", ".venv", ".git"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
reportImportCycles = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
pythonVersion = "3.12"
pythonPlatform = "Linux"
ignore = ["./work"]
